src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Accompanied_By__c</fullName>
        <label>Accompanied By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Accompanied</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Sibling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accompanied_by_Name__c</fullName>
        <label>Accompanied by Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Balance__c</fullName>
        <description>Total Account Balance from NetSuite.</description>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Overdue_Balance__c</fullName>
        <description>Overdue account balance from NetSuite</description>
        <label>Account Overdue Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advisor_Notes__c</fullName>
        <label>Advisor Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alphaeon_Applied_Amount__c</fullName>
        <label>Alphaeon Applied Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alphaeon_Approved_Amount__c</fullName>
        <label>Alphaeon Approved Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alternate_Treatment_Fee_Quoted__c</fullName>
        <label>Alternate Treatment Fee Quoted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alternate_Treatment_Plan__c</fullName>
        <label>Alternate Treatment Plan</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Implant</fullName>
                </value>
                <value>
                    <fullName>Multiple Implants</fullName>
                </value>
                <value>
                    <fullName>Multiple Implant Bridge</fullName>
                </value>
                <value>
                    <fullName>AO4 Upper</fullName>
                </value>
                <value>
                    <fullName>AO4 Lower</fullName>
                </value>
                <value>
                    <fullName>AO4 Edentulous Upper</fullName>
                </value>
                <value>
                    <fullName>AO4 Edentulous Lower</fullName>
                </value>
                <value>
                    <fullName>DBL AO4</fullName>
                </value>
                <value>
                    <fullName>DBL AO4 Edentulous</fullName>
                </value>
                <value>
                    <fullName>Upper Denture</fullName>
                </value>
                <value>
                    <fullName>Lower Denture</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Transitional DBL AO4</fullName>
                </value>
                <value>
                    <fullName>None Given</fullName>
                </value>
                <value>
                    <fullName>Lower Overdenture</fullName>
                </value>
                <value>
                    <fullName>Upper Overdenture</fullName>
                </value>
                <value>
                    <fullName>Phased Barless Interim Upper AO4</fullName>
                </value>
                <value>
                    <fullName>Phased Barless Interim Lower AO4</fullName>
                </value>
                <value>
                    <fullName>Phased Barless Interim Double AO4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>American_Applied_Amount__c</fullName>
        <label>American Applied Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>American_Approved_Amount__c</fullName>
        <label>American Approved Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>American_Charged_Amount__c</fullName>
        <label>American Charged Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Charged_to_Alphaeon_Account__c</fullName>
        <label>Amount Charged to Alphaeon Account</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Charged_to_CareCredit_Account__c</fullName>
        <label>Amount Charged to CareCredit Account</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Charged_to_Chase_Account__c</fullName>
        <label>Amount Charged to Chase Account</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Charged_to_Citi_Account__c</fullName>
        <label>Amount Charged to Citi Account</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Charged_to_MedChoice_Account__c</fullName>
        <label>Amount Charged to MedChoice Account</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Charged_to_SpringStone_Account__c</fullName>
        <label>Amount Charged to SpringStone Account</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Any_challenges_related_to_the_consult__c</fullName>
        <description>Were there any challenges we should be aware of as it relates to this consult process?  (ie. wait time, schedule type - enter none if no barriers</description>
        <inlineHelpText>Were there any challenges we should be aware of as it relates to this consult process?  (ie. wait time, schedule type - enter None if no barriers</inlineHelpText>
        <label>Any challenges related to the consult?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applied_for_Financing__c</fullName>
        <formula>CASE( Financing_Result__c , &quot;Approved Partial Amount&quot; , &quot;Applied for Financing&quot;, &quot;Approved Full Amount&quot;, &quot;Applied for Financing&quot;, &quot;Declined&quot;, &quot;Applied for Financing&quot;,&quot;Did not Apply for Financing&quot;)</formula>
        <label>Applied for Financing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approve_Consult__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve Consult</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approve_Nothing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve Nothing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approve_Panoramic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve Panoramic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approve_iCat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve iCat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_for_Financing__c</fullName>
        <formula>CASE( Financing_Result__c , &quot;Approved Partial Amount&quot; , &quot;Approved&quot;, &quot;Approved Full Amount&quot;, &quot;Approved&quot;, &quot;Declined&quot;, &quot;Declined&quot;,&quot;Did not Apply for Financing&quot;)</formula>
        <label>Approved for Financing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMOC_Daytime_VM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BMOC Daytime VM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMOC_Daytime__c</fullName>
        <label>BMOC Daytime</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMOC_Evening_VM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BMOC Evening VM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMOC_Evening__c</fullName>
        <label>BMOC Evening</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMOC_Weekend_VM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BMOC Weekend VM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMOC_Weekend__c</fullName>
        <label>BMOC Weekend</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CEC_Referral_Balance__c</fullName>
        <description>Total credit accrued by the patient for referring other patients into ClearChoice Esthetics</description>
        <label>CEC Referral Balance</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CEC_Referred_By_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Other patient who referred this patient to come into ClearChoice for Esthetics products/services. There is a separate field for reference to a Private Practice Patient... in that scenario, this field would be left blank.</description>
        <label>CEC Referred By (Dental Patient)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CEC_Referred_By_Private_Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Other patient who referred this patient to come into ClearChoice for Esthetics products/services. There is a separate field for reference to a Consult/Account... in that scenario, this field would be left blank.</description>
        <label>CEC Referred By (Priv. Practice Patient)</label>
        <referenceTo>Private_Practice_Patient__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CEC_Referred_By__c</fullName>
        <description>Staff member who referred the patient to us for Esthetics products/services</description>
        <label>CEC Referred By (ClearChoice Staff)</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHOICE_Color__c</fullName>
        <label>&lt;b&gt;*New*&lt;/b&gt; CHOICE Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GREEN / Dominant</fullName>
                </value>
                <value>
                    <fullName>RED / Influencer</fullName>
                </value>
                <value>
                    <fullName>BLUE / Steady Relater</fullName>
                </value>
                <value>
                    <fullName>YELLOW / Cautious</fullName>
                </value>
                <value>
                    <fullName>ORANGE / Trump</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Center_Owner__c</fullName>
        <label>Call Center Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barb Emerick</fullName>
                </value>
                <value>
                    <fullName>Donica Huffman</fullName>
                </value>
                <value>
                    <fullName>Kim Goehring</fullName>
                </value>
                <value>
                    <fullName>Lisa Avrett</fullName>
                </value>
                <value>
                    <fullName>Mario Breton</fullName>
                </value>
                <value>
                    <fullName>Meridith Hertach</fullName>
                </value>
                <value>
                    <fullName>Nathaly Ambos</fullName>
                </value>
                <value>
                    <fullName>Stephanie Gonzalez</fullName>
                </value>
                <value>
                    <fullName>Janelle Gladstone</fullName>
                </value>
                <value>
                    <fullName>Carla Singh</fullName>
                </value>
                <value>
                    <fullName>Heather Storer</fullName>
                </value>
                <value>
                    <fullName>Kris Karge</fullName>
                </value>
                <value>
                    <fullName>Carrie Strohmeyer</fullName>
                </value>
                <value>
                    <fullName>Tanya Szalwiniski</fullName>
                </value>
                <value>
                    <fullName>David Cardenas</fullName>
                </value>
                <value>
                    <fullName>Mary Helen Turner</fullName>
                </value>
                <value>
                    <fullName>Juel Kuckenmeister</fullName>
                </value>
                <value>
                    <fullName>Jaime Cangemi</fullName>
                </value>
                <value>
                    <fullName>Cameron Fisher</fullName>
                </value>
                <value>
                    <fullName>Javier Mantilla</fullName>
                </value>
                <value>
                    <fullName>Kristing Yoelin</fullName>
                </value>
                <value>
                    <fullName>Audrey Dinges</fullName>
                </value>
                <value>
                    <fullName>Tj Probst</fullName>
                </value>
                <value>
                    <fullName>John Tolmich</fullName>
                </value>
                <value>
                    <fullName>Mariann Maestas</fullName>
                </value>
                <value>
                    <fullName>Kesley Low</fullName>
                </value>
                <value>
                    <fullName>Krista Schaad</fullName>
                </value>
                <value>
                    <fullName>Andy McMullen</fullName>
                </value>
                <value>
                    <fullName>Deb Scheer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Result__c</fullName>
        <label>Call Result</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Inbound_Call__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Consultation Scheduled</fullName>
                </value>
                <value>
                    <fullName>VIP Seminar Scheduled</fullName>
                </value>
                <value>
                    <fullName>Seminar Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancelled_Prosth_Exam_Revenue__c</fullName>
        <label>Cancelled Prosth Exam Revenue</label>
        <summarizedField>Opportunity.Negotiated_Total_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Cancelled Not Rescheduled</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CareCredit_Applied_Amount__c</fullName>
        <label>CareCredit Applied Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CareCredit_Approved_Amount__c</fullName>
        <label>CareCredit Approved Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Celigo_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Celigo Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Center_Address__c</fullName>
        <formula>Center__r.Street_1__c &amp; &quot; &quot; &amp; 
Center__r.Street_2__c &amp; BR() &amp; 
Center__r.City__c &amp; &quot;, &quot; &amp; TEXT(Center__r.State__c) &amp; &quot; &quot; &amp; Center__r.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Center Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center_Local_Front_Desk__c</fullName>
        <formula>Center__r.Local_Front_Desk__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Center Local Front Desk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center_Location__c</fullName>
        <label>Center Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Atlanta Alpharetta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Boston Woburn</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Chicago Deerfield/Northbrook</fullName>
                </value>
                <value>
                    <fullName>Chicago Downers Grove</fullName>
                </value>
                <value>
                    <fullName>Chicago Evanston</fullName>
                </value>
                <value>
                    <fullName>Chicago Naperville</fullName>
                </value>
                <value>
                    <fullName>Chicago Schaumburg</fullName>
                </value>
                <value>
                    <fullName>Cincinnati</fullName>
                </value>
                <value>
                    <fullName>Cleveland</fullName>
                </value>
                <value>
                    <fullName>Cleveland Akron</fullName>
                </value>
                <value>
                    <fullName>Columbia</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Dallas Arlington</fullName>
                </value>
                <value>
                    <fullName>Dallas Fort Worth</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Denver Colorado Springs</fullName>
                </value>
                <value>
                    <fullName>Denver Glenwood Springs</fullName>
                </value>
                <value>
                    <fullName>Denver Implant Denistry</fullName>
                </value>
                <value>
                    <fullName>Detroit Southfield</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Houston Woodlands</fullName>
                </value>
                <value>
                    <fullName>Kansas City</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles Orange County</fullName>
                </value>
                <value>
                    <fullName>Los Angeles Torrance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Center_Location_sort__c</fullName>
        <description>For Excel reporting, the Center Location sort field sets the sort order for the Center Dashboard and other reporting components.</description>
        <formula>CASE(Center_Location__c , 
                   &quot;Atlanta&quot;, &quot;A1&quot;, 
                   &quot;Austin&quot;, &quot;B1&quot;,
                   &quot;Chicago&quot;, &quot;C1&quot;, 
                   &quot;Chicago Deerfield/Northbrook&quot;, &quot;D1&quot;,
                   &quot;Chicago Naperville&quot;, &quot;E1&quot;, 
                   &quot;Cleveland&quot;, &quot;F1&quot;,
                   &quot;Dallas&quot;, &quot;G1&quot;, 
                   &quot;Dallas Fort Worth&quot;, &quot;G2&quot;, 
                   &quot;Denver&quot;, &quot;H1&quot;,
                   &quot;Denver Colorado Springs&quot;, &quot;I1&quot;, 
                   &quot;Denver Glenwood Springs&quot;, &quot;J1&quot;,
                    &quot;Kansas City&quot;, &quot;K1&quot;,
                   &quot;Las Vegas&quot;, &quot;L1&quot;, 
                   &quot;Phoenix&quot;, &quot;M1&quot;,
                   &quot;Phoenix Mesa&quot;, &quot;M2&quot;,
                   &quot;Portland&quot;, &quot;N1&quot;, 
                    &quot;Sacramento&quot;, &quot;O1&quot;,
                    &quot;Salt Lake City&quot;, &quot;O2&quot;,
                   &quot;St. Louis&quot;, &quot;P1&quot;, 
                   &quot;Washington Tysons Corner&quot;, &quot;Q1&quot;,
                   &quot;Washington Chevy Chase&quot;, &quot;R1&quot;,
                  &quot;Z1&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sort field used for Excel reporting.</inlineHelpText>
        <label>Center Location sort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center_Master_Location__c</fullName>
        <formula>CASE( TEXT( Center_Location__c ) , 
                 &quot;Chicago Deerfield/Northbrook&quot;, &quot;Chicago&quot;, 
                 &quot;Chicago Naperville&quot;, &quot;Chicago&quot;, 
                 &quot;Dallas Fort Worth&quot;, &quot;Dallas&quot;,
                  &quot;Denver Colorado Springs&quot;, &quot;Denver&quot;, 
                  &quot;Denver Glenwood Springs&quot;, &quot;Denver&quot;, 
&quot;Miami Fort Lauderdale&quot;,&quot;Miami&quot;,
                  &quot;Phoenix Mesa&quot;, &quot;Phoenix&quot;, 
                  &quot;Washington Chevy Chase&quot;, &quot;Washington Tysons Corner&quot;, 
                  TEXT(Center_Location__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Center Master Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center_Name__c</fullName>
        <formula>Center__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Center Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Consults</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chase_Applied_Amount2__c</fullName>
        <label>Chase Applied Amount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chase_Approved_Amount2__c</fullName>
        <label>Chase Approved Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chase_Approved_Amount__c</fullName>
        <label>Old Chase Approved Amount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chase_Interest_Rate__c</fullName>
        <label>Chase Interest Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Chase__c</fullName>
        <label>Old Chase Applied Amount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citi_Applied_Amount__c</fullName>
        <label>Citi Applied Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Citi_Approved_Amount__c</fullName>
        <label>Citi Approved Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Citi_Interest_Rate__c</fullName>
        <label>Citi Interest Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Clinical_Notes__c</fullName>
        <label>Clinical Notes</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condition_Awareness__c</fullName>
        <label>Treatment options awareness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>very aware (i.e., had researched/visited competitors)</fullName>
                </value>
                <value>
                    <fullName>somewhat aware (i.e., only visited ClearChoice, but know other options exist)</fullName>
                </value>
                <value>
                    <fullName>not aware (i.e., only aware of ClearChoice)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consult_Age_days__c</fullName>
        <formula>TODAY()- DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consult Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consult_Completed_Date__c</fullName>
        <description>Date when Consult Completed was selected for the Consult; updated with a Workflow Rule</description>
        <label>Consult Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consult_Completed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Consult Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consult_Likelihood_of_Scheduling_Exam__c</fullName>
        <formula>IF(AND(ISPICKVAL(Consult_Result__c, &quot;30 Day Pipeline&quot;),Consult_Age_days__c &gt; 30,Consult_Age_days__c &lt; 60),&quot;3 Medium - 20%&quot;, 
IF(AND(ISPICKVAL(Consult_Result__c, &quot;30 Day Pipeline&quot;),Consult_Age_days__c &gt; 60),&quot;6 Other&quot;, 
IF(AND(ISPICKVAL(Consult_Result__c, &quot;60 Day Pipeline&quot;),Consult_Age_days__c &gt; 90),&quot;6 Other&quot;, 
CASE( Consult_Result__c , 
&quot;Prostho Exam Scheduled&quot;,&quot;1 Scheduled - 100%&quot;, 
&quot;Prostho Exam Scheduled Call Back&quot;,&quot;1 Scheduled - 100%&quot;, 
&quot;Prostho Exam Outside Sales&quot;,&quot;1 Scheduled - 100%&quot;, 
&quot;30 Day Pipeline&quot;,&quot;2 High - 50%&quot;, 
&quot;60 Day Pipeline&quot;,&quot;3 Medium - 20%&quot;, 
&quot;Doctor Declined Case&quot;,&quot;5 Not a Candidate - 0%&quot;, 
&quot;Health Disqualification&quot;,&quot;5 Not a Candidate - 0%&quot;, 
&quot;Not a Candidate&quot;,&quot;5 Not a Candidate - 0%&quot;, 
&quot;No Money&quot;,&quot;4 Financial Difficulties - 5%&quot;, 
&quot;6 Other&quot;)
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consult - Likelihood of Scheduling Exam</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consult_Result_Start_Did_Not_Star__c</fullName>
        <formula>IF( Started__c &gt;=1,&quot;Started&quot;,&quot;Did Not Start&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consult Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consult_Result_Status__c</fullName>
        <formula>CASE( Consult_Result__c ,
&quot;Prostho Exam Scheduled&quot;,&quot;Started&quot;,
&quot;Prostho Exam Scheduled Call Back&quot;,&quot;Started&quot;,
&quot;Prostho Exam Outside Sales&quot;,&quot;Started&quot;,
&quot;2nd Consult&quot;,&quot;Considering&quot;,
&quot;30 Day Pipeline&quot;,&quot;Considering&quot;,
&quot;60 Day Pipeline&quot;,&quot;Considering&quot;,
&quot;90 Day Pipeline&quot;,&quot;Considering&quot;,
&quot;Outside Financing&quot;,&quot;Considering&quot;,
&quot;Medical Clearance&quot;,&quot;Considering&quot;,
&quot;Outbound Sales Prospective Patient&quot;,&quot;Considering&quot;,
&quot;Doctor Declined Case&quot;,&quot;No Longer a Prospect&quot;,
&quot;Health Disqualification&quot;,&quot;No Longer a Prospect&quot;,
&quot;Refered Out to Doctor&quot;,&quot;No Longer a Prospect&quot;,
&quot;Referred to Satellite Doctor&quot;,&quot;No Longer a Prospect&quot;,
&quot;No Longer Interested&quot;,&quot;No Longer a Prospect&quot;,
&quot;Not a Candidate&quot;,&quot;No Longer a Prospect&quot;,
&quot;No Money&quot;,&quot;No Longer a Prospect&quot;,
&quot;Walked Out&quot;,&quot;No Longer a Prospect&quot;,
&quot;Treatment Received Elsewhere&quot;,&quot;No Longer a Prospect&quot;,
&quot;Considering&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consult Result Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consult_Result__c</fullName>
        <label>Consult Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prostho Exam Scheduled</fullName>
                </value>
                <value>
                    <fullName>Prostho Exam Scheduled Call Back</fullName>
                </value>
                <value>
                    <fullName>2nd Consult</fullName>
                </value>
                <value>
                    <fullName>30 Day Pipeline</fullName>
                </value>
                <value>
                    <fullName>60 Day Pipeline</fullName>
                </value>
                <value>
                    <fullName>90 Day Pipeline</fullName>
                </value>
                <value>
                    <fullName>Medical Clearance</fullName>
                </value>
                <value>
                    <fullName>Doctor Declined Case</fullName>
                </value>
                <value>
                    <fullName>Refered Out to Doctor</fullName>
                </value>
                <value>
                    <fullName>No Longer Interested</fullName>
                </value>
                <value>
                    <fullName>Not a Candidate</fullName>
                </value>
                <value>
                    <fullName>No Money</fullName>
                </value>
                <value>
                    <fullName>Walked Out</fullName>
                </value>
                <value>
                    <fullName>Treatment Received Elsewhere</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Treatment_Plan__c</fullName>
        <label>Custom Treatment Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Overdue__c</fullName>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dental_Condition__c</fullName>
        <label>Dental Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Tooth</fullName>
                </value>
                <value>
                    <fullName>Multiple Teeth</fullName>
                </value>
                <value>
                    <fullName>Bridge Failing</fullName>
                </value>
                <value>
                    <fullName>Crown(s) Failing</fullName>
                </value>
                <value>
                    <fullName>Partial Denture</fullName>
                </value>
                <value>
                    <fullName>Lower Denture</fullName>
                </value>
                <value>
                    <fullName>Upper Denture</fullName>
                </value>
                <value>
                    <fullName>Dbl Denture</fullName>
                </value>
                <value>
                    <fullName>Perio Disease</fullName>
                </value>
                <value>
                    <fullName>Existing Implant Failing</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>